tests/fails/f2.t
if not require("fail") then return end
terra foo()
    foo()
end
foo()
